--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.1",
+    "nodemailer": "^6.7.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
